<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity5">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/soal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text="@string/apakah_tiara_intan_kencana_wijaya_cantik"
            android:textSize="20sp"/>
       <RadioGroup
           android:id="@+id/groupjwbn"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:orientation="vertical"
           android:padding="20dp">

           <RadioButton
               android:id="@+id/answ1"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/woi_iyalah_cantik_anu"
               android:textSize="16sp"/>

           <RadioButton
               android:id="@+id/answ2"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/woi_sangat_cantik"
               android:textSize="16sp"/>

           <RadioButton
               android:id="@+id/answ3"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/gilaaaaak_cantik_banget_omaygat"
               android:textSize="16sp"/>

           <RadioButton
               android:id="@+id/answ4"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/ooow_cantik_lah_bosku"
               android:textSize="16sp"/>
       </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text="@string/silahkan_input_jawaban_anda"
            android:textSize="20sp"/>

        <Button
            android:id="@+id/submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/submit"
            android:layout_gravity="end"
            android:layout_marginEnd="5dp"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>