<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/allbutton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="30dp"
        android:orientation="vertical"
        android:gravity="center">

        <Button
            android:id="@+id/btnpindahactivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pindah_activity"/>

        <Button
            android:id="@+id/btndata"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/pindah_activity_with_data"/>
        <Button
            android:id="@+id/btngacor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/pindah_activity_with_object"/>
        <Button
            android:id="@+id/btnproses"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/pindah_activity_lain"/>
        <Button
            android:id="@+id/kontak"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/buka_telephone"/>
        <Button
            android:id="@+id/camera"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/buka_kamera"/>

       <LinearLayout
           android:layout_width="wrap_content"
           android:layout_height="wrap_content">

           <TextView
               android:id="@+id/hasil"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginTop="15dp"
               android:text=""
               android:textSize="30sp"
               android:textStyle="bold"/>
       </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>